Added Halls endpoints to swagger docs
